# flat-packager

./: .gitignore  README.md  pack_repo.py  pyproject.toml  unpack_repo.py
.github/workflows/: ci.yml
src/flat_packager/: __init__.py  archive.py  inspect.py  pack.py  unpack.py  verify.py
tests/: test_roundtrip.py
