[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flat-packager"
version = "0.3.0"
description = "Pack a repository into one flat text archive and restore it later."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Thomas" }
]
keywords = ["archive", "repository", "github", "packaging", "restore"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: System :: Archiving",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tomanizer/flat-packager"
Repository = "https://github.com/tomanizer/flat-packager"

[project.scripts]
flat-pack = "flat_packager.pack:main"
flat-unpack = "flat_packager.unpack:main"
flat-inspect = "flat_packager.inspect:main"
flat-verify = "flat_packager.verify:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
